[gd_scene load_steps=3 format=3 uid="uid://of6crh3ihy78"]

[ext_resource type="Theme" uid="uid://cpr0j1kjpbjoy" path="res://Themes/main_menu.tres" id="1_mpo62"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="2_iinwq"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mpo62")
script = ExtResource("2_iinwq")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.623529, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Money"
horizontal_alignment = 1

[node name="expense" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$XX"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="expense button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Expense"

[node name="income" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Income"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="debug" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Version 1.0.0"

[node name="todolist" type="Label" parent="."]
layout_mode = 0
offset_left = 1998.0
offset_top = 323.0
offset_right = 4626.0
offset_bottom = 3080.0
text = "Todo:

make and save settings
bedtime and insult buttons
general cleanup

android test
notifications

bedtime takes over phone?

do something with version"

[connection signal="pressed" from="MarginContainer/VBoxContainer/expense button" to="." method="_on_expense_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/income" to="." method="_on_income_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
